[package]
name = "aurora_prime"
version = "0.0.1"
authors = ["Xeoxaz <Xeoxaz@outlook.com>"]
description = "A better web."
repository = "https://github.com/xeoxaz/aurora_prime"
license = "Proprietary"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
lto = "fat"
opt-level = 3
